--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "dev:windows": "npm run server",
     "dev:frontend": "vite",
+    "mac": "concurrently \"npm run server:mac\" \"npm run dev\"",
+    "win10": "concurrently \"npm run server:win10\" \"npm run dev\"",
+    "win100": "concurrently \"npm run server:win100\" \"npm run dev\"",
+    "server:mac": "NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 node server.js",
+    "server:win10": "NODE_ENV=production HOST=10.51.101.49 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 node server.js",
+    "server:win100": "NODE_ENV=production HOST=100.117.205.41 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 node server.js",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
