Add cross-env for Windows compatibility - fix environment variables syntax

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "win10:full": "concurrently \"npm run server:win10\" \"npm run dev:win10\"",
     "win100": "concurrently \"npm run server:win100\" \"npm run dev:win100\"",
     "win100:full": "concurrently \"npm run server:win100\" \"npm run dev:win100\"",
-    "dev:mac": "NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 vite",
-    "dev:win10": "NODE_ENV=production HOST=10.51.101.49 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 vite",
-    "dev:win100": "NODE_ENV=production HOST=100.117.205.41 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 vite",
-    "server:mac": "NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 node server.js",
-    "server:win10": "NODE_ENV=production HOST=10.51.101.49 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 node server.js",
-    "server:win100": "NODE_ENV=production HOST=100.117.205.41 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 node server.js",
+    "dev:mac": "cross-env NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 vite",
+    "dev:win10": "cross-env NODE_ENV=production HOST=10.51.101.49 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 vite",
+    "dev:win100": "cross-env NODE_ENV=production HOST=100.117.205.41 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 vite",
+    "server:mac": "cross-env NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 node server.js",
+    "server:win10": "cross-env NODE_ENV=production HOST=10.51.101.49 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 node server.js",
+    "server:win100": "cross-env NODE_ENV=production HOST=100.117.205.41 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 node server.js",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
@@ -93,6 +93,7 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.0",
+    "cross-env": "^10.0.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
