--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "run:full": "node run-ip.js",
     "dev:full": "node run-dynamic.js",
     "dev:server": "node run-dynamic.js",
+    "dev:frontend": "vite",
+    "win:run": "run-windows.bat",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
