--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "win100": "concurrently \"npm run server:win100\" \"npm run dev:win100\"",
     "win100:full": "concurrently \"npm run server:win100\" \"npm run dev:win100\"",
     "dev:mac": "cross-env NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 vite",
-    "dev:win10": "cross-env NODE_ENV=production HOST=10.51.101.49 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 vite",
-    "dev:win100": "cross-env NODE_ENV=production HOST=100.117.205.41 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 vite",
+    "dev:win10": "cross-env NODE_ENV=production HOST=10.51.101.49 VITE_API_URL=http://10.51.101.49:3002 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 vite",
+    "dev:win100": "cross-env NODE_ENV=production HOST=100.117.205.41 VITE_API_URL=http://100.117.205.41:3002 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 vite",
     "server:mac": "cross-env NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 node server.js",
     "server:win10": "cross-env NODE_ENV=production HOST=10.51.101.49 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 node server.js",
     "server:win100": "cross-env NODE_ENV=production HOST=100.117.205.41 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 node server.js",
-    "dev:frontend": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
