--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "mssql": "^11.0.1",
     "net": "^1.0.2",
     "next-themes": "^0.3.0",
+    "path-to-regexp": "^6.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
