Add VITE_API_URL to Mac development scripts - Update dev:mac and server:mac scripts to include VITE_API_URL - Ensures consistent environment variable usage across all environments

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "win10:full": "concurrently \"npm run server:win10\" \"npm run dev:win10\"",
     "win100": "concurrently \"npm run server:win100\" \"npm run dev:win100\"",
     "win100:full": "concurrently \"npm run server:win100\" \"npm run dev:win100\"",
-    "dev:mac": "cross-env NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 vite",
+    "dev:mac": "cross-env NODE_ENV=development HOST=localhost VITE_API_URL=http://localhost:3002 BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 vite",
     "dev:win10": "cross-env NODE_ENV=production HOST=10.51.101.49 VITE_API_URL=http://10.51.101.49:3002 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 vite",
     "dev:win100": "cross-env NODE_ENV=production HOST=100.117.205.41 VITE_API_URL=http://100.117.205.41:3002 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 vite",
-    "server:mac": "cross-env NODE_ENV=development HOST=localhost BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 node server.js",
+    "server:mac": "cross-env NODE_ENV=development HOST=localhost VITE_API_URL=http://localhost:3002 BACKEND_URL=http://localhost:3002 FRONTEND_URL=http://localhost:8080 NOVNC_URL=http://localhost:6081 node server.js",
     "server:win10": "cross-env NODE_ENV=production HOST=10.51.101.49 BACKEND_URL=http://10.51.101.49:3002 FRONTEND_URL=http://10.51.101.49:8081 NOVNC_URL=http://10.51.101.49:6081 node server.js",
     "server:win100": "cross-env NODE_ENV=production HOST=100.117.205.41 BACKEND_URL=http://100.117.205.41:3002 FRONTEND_URL=http://100.117.205.41:8081 NOVNC_URL=http://100.117.205.41:6081 node server.js",
     "build": "vite build",
